PostInfoTest Hibernate 의존성 제거